--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -58,6 +58,7 @@
             AbsoluteLayout.LayoutFlags="All"
             BorderColor="Black"
             HasShadow="True">
+            
             <Frame
                 VerticalOptions="Center"
                 HorizontalOptions="Center"
@@ -65,10 +66,12 @@
                 HasShadow="true"
                 WidthRequest="300"
                 HeightRequest="500">
+               
                 <Grid VerticalOptions="FillAndExpand"
               BackgroundColor="White"
               RowSpacing="0"
               ColumnSpacing="0">
+                    
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -77,11 +80,19 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-
+                    
                     <StackLayout Grid.Row="0"  
                              Padding="10"
                              BackgroundColor="White"
                              Orientation="Horizontal">
+                        <Image Grid.Row="2" HorizontalOptions="End" HeightRequest="20" WidthRequest="20" Source="cancel.png">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="RemovePopupTapped"
+                                                      NumberOfTapsRequired="1">
+
+                                </TapGestureRecognizer>
+                            </Image.GestureRecognizers>
+                        </Image>
                         <Image Source="search.png"
                                HeightRequest="20"
                                WidthRequest="20"/>
@@ -94,7 +105,8 @@
                                ReturnType="Search"
                                HorizontalOptions="FillAndExpand" />
                         <Button ImageSource="search.png"
-                    Clicked="SearchPlace_Clicked"/>
+                    Clicked="SearchPlace_Clicked"
+                                />
 
                     </StackLayout>
 
