--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -37,8 +37,13 @@
             <Label x:Name="settingsDay" Grid.Row="2" Grid.Column="1" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
             <Label x:Name="settingsDate" Grid.Row="4" Grid.Column="1" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
 
+           
+            <Entry x:Name="nameSettings" Grid.Row="6" Grid.Column="1" Text="{Binding Nickname}" Placeholder="Insert Nickname" Completed="OnChange"></Entry>
 
-            <Button Text="Logout"  Grid.Row="6" Grid.Column="1" Clicked="Logout_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+            <Label Grid.Row="8" Grid.Column="1" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
+            <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
+            
+                <Button Text="Logout"  Grid.Row="10" Grid.Column="1" Clicked="Logout_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
         </Grid>
 
     </ContentPage.Content>
