--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -17,9 +17,14 @@
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
+                <RowDefinition Height="45"/> <!-- 10 -->
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="5"/>
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="25"/>
-                <RowDefinition Height="75"/>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="25"/>
@@ -42,8 +47,14 @@
 
             <Label Grid.Row="8" Grid.Column="1" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
             <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
+
+            <Entry x:Name="radiusSettings" Grid.Row="7" Grid.Column="1" Text="{Binding Radius}" Placeholder="Insert Radius" Completed="OnChange"></Entry>
             
-                <Button Text="Logout"  Grid.Row="10" Grid.Column="1" Clicked="Logout_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+            <Button Text="Login"  Grid.Row="10" Grid.Column="1" Clicked="Login_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+
+            <Button Text="Signup"  Grid.Row="12" Grid.Column="1" Clicked="Signup_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+
+            <Button Text="Logout"  Grid.Row="14" Grid.Column="1" Clicked="Logout_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
         </Grid>
 
     </ContentPage.Content>
