Resolve Fire UI work + Prep for Photo implementation

--- a/Wildfire/Views/ReportFireInfoView.xaml
+++ b/Wildfire/Views/ReportFireInfoView.xaml
@@ -60,7 +60,7 @@
 
             <!--Wind Direction // Start-->
             <Label Text="Wind Direction" Grid.Row="6" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
-            <Picker x:Name="directionEntry" Title="--Select--" Grid.Row="7" Grid.Column="1" SelectedIndexChanged="directionEntry_SelectedIndexChanged"/>
+            <Picker x:Name="directionEntry" Title="--Select--" Grid.Row="7" Grid.Column="1" BackgroundColor="LightGray" SelectedIndexChanged="directionEntry_SelectedIndexChanged"/>
             <!--Wind Direction // End-->
 
             <!-- Latitude & Longitude // Start-->
@@ -71,8 +71,8 @@
             <!-- Place Name // Start-->
             <Label x:Name="FireDescription" Text="Fire Description" Grid.Row="9" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
             <!-- PLace Name // End-->
-            <Editor x:Name="FireDesc" Placeholder="E.g. Type" HeightRequest="100" Grid.Row="10" FontSize="16" TextColor="Black" BackgroundColor="LightGray" Grid.Column="1" Keyboard="Chat"></Editor>
-            <Entry x:Name="fireID" Placeholder="Place Name" Grid.Row="100" Grid.Column="0" FontSize="Medium" Keyboard="Numeric" BackgroundColor="LightGray"></Entry>
+            <Editor x:Name="FireDesc" Placeholder="Quick Description" MaxLength="100" HeightRequest="100" Grid.Row="10" FontSize="16" TextColor="Black" BackgroundColor="LightGray" Grid.Column="1" Keyboard="Text"></Editor>
+            <Entry x:Name="fireID" Placeholder="Place Name" Grid.Row="70" Grid.Column="0" FontSize="Medium" Keyboard="Numeric" BackgroundColor="LightGray"></Entry>
             <Button Grid.Row="12" Grid.Column="1" FontSize="20" Text="Add Photo +" BackgroundColor="LightGray"></Button>
             <Button  FontSize="25" Text="Report Fire" x:Name="btn_Add" WidthRequest="100" HeightRequest=" 50" Grid.Row="14" Grid.Column="1" Clicked="btn_Add_Clicked" BackgroundColor="#ff8c19"></Button>
 
