--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -38,23 +38,46 @@
             </Grid.ColumnDefinitions>
 
             <!--<Label Text="Welcome" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>-->
+            
+                <Label  Grid.Row="2" Grid.Column="1" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
 
-            <Label x:Name="settingsDay" Grid.Row="2" Grid.Column="1" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
-            <Label x:Name="settingsDate" Grid.Row="4" Grid.Column="1" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+            
+            
+                <Label Grid.Row="4" Grid.Column="1" x:Name="settingsDate" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+
+            
 
            
-            <Entry x:Name="nameSettings" Grid.Row="6" Grid.Column="1" Text="{Binding Nickname}" Placeholder="Insert Nickname" Completed="OnChange"></Entry>
+            <Entry x:Name="nameSettings" Grid.Row="20" Grid.Column="1" Text="{Binding Nickname}" Placeholder="Insert Nickname" Completed="OnChange"></Entry>
 
-            <Label Grid.Row="8" Grid.Column="1" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
+            <Label Grid.Row="8" Grid.Column="1" FontSize="18"  TextColor="black" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
             <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
 
-            <Entry x:Name="radiusSettings" Grid.Row="7" Grid.Column="1" Text="{Binding Radius}" Placeholder="Insert Radius" Completed="OnChange"></Entry>
             
-            <Button Text="Login"  Grid.Row="10" Grid.Column="1" Clicked="Login_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
 
-            <Button Text="Signup"  Grid.Row="12" Grid.Column="1" Clicked="Signup_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+                <Label Grid.Row="7" Grid.Column="1" FontSize="18" TextColor="Black" HorizontalOptions="Start"  VerticalOptions="Center" Text="Notification Radius"></Label>
+            <Entry x:Name="radiusSettings" HorizontalTextAlignment="End" Grid.Row="7" Grid.Column="1" BackgroundColor="LightGray" HorizontalOptions="End" Text="{Binding Radius}" Placeholder="Set Radius(Km)" Keyboard="Numeric" Completed="OnChange"></Entry>
 
-            <Button Text="Logout"  Grid.Row="14" Grid.Column="1" Clicked="Logout_Button_Clicked" HorizontalOptions="CenterAndExpand" VerticalOptions="End"></Button>
+            <Button Text="Login"  Grid.Row="10" Grid.Column="1" Clicked="Login_Button_Clicked" FontSize="20"
+                     FontAttributes="Bold"
+                     CornerRadius="10"
+                     BorderWidth="3"
+                     BorderColor="Black"
+                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300"  VerticalOptions="End" BackgroundColor="#ff8c19"></Button>
+
+            <Button Text="Signup"  Grid.Row="12" Grid.Column="1" Clicked="Signup_Button_Clicked" FontSize="20"
+                     FontAttributes="Bold"
+                     CornerRadius="10"
+                     BorderWidth="3"
+                     BorderColor="Black"
+                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300" VerticalOptions="End"></Button>
+
+            <Button Text="Logout"  Grid.Row="14" Grid.Column="1" Clicked="Logout_Button_Clicked" FontSize="20"
+                     FontAttributes="Bold"
+                     CornerRadius="10"
+                     BorderWidth="3"
+                     BorderColor="Black"
+                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300" VerticalOptions="End" BackgroundColor="#2daff0"></Button>
         </Grid>
 
     </ContentPage.Content>
