--- a/Wildfire/Views/ReportFireInfoView.xaml
+++ b/Wildfire/Views/ReportFireInfoView.xaml
@@ -16,13 +16,13 @@
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="70"/>
-                <RowDefinition Height="55"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="90"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="70"/>
-                <RowDefinition Height="70"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="1"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -68,6 +68,8 @@
             <Label x:Name="myLong" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="2"></Label>
             <!-- Latitude & Longitude // End-->
 
+            <Label x:Name="deviceID" Grid.Row="0" Grid.Column="0" TextColor="Black" FontSize="1"></Label>
+
             <!-- Description // Start-->
             <Label x:Name="FireDescription" Text="Fire Description" Grid.Row="9" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
             <Editor x:Name="FireDesc" Placeholder="Quick Description" MaxLength="100" HeightRequest="100" Grid.Row="10" FontSize="16" TextColor="Black" BackgroundColor="LightGray" Grid.Column="1" Keyboard="Text"></Editor>
@@ -92,11 +94,27 @@
                 BorderWidth="3"
                 FontAttributes="Bold"
                 Clicked="photo_Add_Clicked"></Button>
-            
+
+            <Button 
+                x:Name="photo_Take"
+                Grid.Row="12" 
+                Grid.Column="1" 
+                FontSize="20" 
+                Text="Take Photo +" 
+                BackgroundColor="LightGray" 
+                WidthRequest="300"
+                BorderColor="Black"
+                TextColor="Black"
+                HorizontalOptions="Center"
+                CornerRadius="10"
+                BorderWidth="3"
+                FontAttributes="Bold"
+                Clicked="photo_Take_Clicked"></Button>
+
             <Image 
                 x:Name="imgChoose" 
                 HeightRequest="150" 
-                Grid.Row="12" 
+                Grid.Row="13" 
                 Grid.Column="1" 
                 Source="photo.png"
                ></Image>
@@ -112,19 +130,19 @@
                 CornerRadius="10"
                 BorderWidth="3"
                 FontSize="20"
-                FontAttributes="Bold" Grid.Row="14" Grid.Column="1" Clicked="btn_Add_Clicked" BackgroundColor="#ff8c19"></Button>
+                FontAttributes="Bold" Grid.Row="15" Grid.Column="1" Clicked="btn_Add_Clicked" BackgroundColor="#ff8c19"></Button>
 
 
 
 
-            <Button  Text="Cancel" x:Name="btn_Cancel" Grid.Row="15" Grid.Column="1"  WidthRequest="300"
+            <Button  Text="Cancel" x:Name="btn_Cancel" Grid.Row="16" Grid.Column="1"  WidthRequest="300"
                 BorderColor="Black"
                 TextColor="Black"
                 HorizontalOptions="Center"
                 
                 CornerRadius="10"
                 BorderWidth="3"
-                FontSize="16"
+                FontSize="20"
                 FontAttributes="Bold" Clicked="btn_Cancel_Clicked"></Button>
 
                
@@ -132,9 +150,7 @@
            
 
            
-            <!--<Button Grid.Row="16" Grid.Column="1" Clicked="Back_Button_Clicked">
-                
-            </Button>-->
+            
         </Grid>
     </ContentPage.Content>
 </ContentPage>
